Statusbar and basic monitor output

--- a/src/app/components/main/topbar/connection/connection.component.html
+++ b/src/app/components/main/topbar/connection/connection.component.html
@@ -14,39 +14,14 @@
     </p>
   </ng-container>
 </p-overlayPanel>
-
-<div class="iconWrapper state-{{signalrService.$socketStatus | async}}" (click)="openStatusDetails($event)"
-  (mouseover)="openStatusDetails($event)">
+<div class="iconWrapper state-{{signalrService.$socketStatus | async}}" [pTooltip]="(statusText | async) | translate"
+  tooltipPosition="bottom">
   <fa-icon [icon]="connectionIcon" size="2x" [fixedWidth]="true"></fa-icon>
 </div>
 
-<p-overlayPanel #statusDetails styleClass="statusOverlay-{{signalrService.$socketStatus | async}}">
-  <ng-container *ngIf="(signalrService.$socketStatus | async) == 0">
-    <ng-container *isBrowser>
-      <p>
-        {{ 'service.issues.browser.noConnection' | translate }}
-      </p>
-      <button (click)="reconnect()" pButton class="ui-button-success" type="button" [icon]="iconClasses"
-        [label]="'service.reconnect' | translate" [disabled]="connecting"></button>
-    </ng-container>
-    <ng-container *isDesktop>
-      <p>
-        {{ 'service.issues.desktop' | translate }}
-      </p>
-    </ng-container>
-  </ng-container>
-  <ng-container *ngIf="(signalrService.$socketStatus | async) == 1">
-    {{ 'service.connected' | translate }}
-  </ng-container>
-  <ng-container *ngIf="(signalrService.$socketStatus | async) == 2">
-      {{ 'service.issues.browser.noToken' | translate }}
-    </ng-container>
-</p-overlayPanel>
-<!-- <button (click)="connect()">Connect</button> -->
-<!-- <pre>
-  Status: {{signalrService.$socketStatus | async}}
-  <ng-container *isDesktop>
-  Clients: {{signalrService.$clients | async}}
-  </ng-container>
-  Info: {{signalrService.$info | async | json}}
-</pre> -->
+<div class="iconWrapper" *ngIf="(signalrService.$socketStatus | async) == 0">
+  <p-button *ngIf="!(showOnTablet | async)" (click)="reconnect()" icon="pi pi-replay"
+    [label]="'service.reconnect' | translate" styleClass="ui-button-success"></p-button>
+  <p-button *ngIf="showOnTablet | async" (click)="reconnect()" icon="pi pi-replay" styleClass="ui-button-success">
+  </p-button>
+</div>
