--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -2245,7 +2245,7 @@ body .ui-widget-overlay {
   background-color: rgba(0, 0, 0, 0.4); }
 
 body .ui-overlaypanel {
-  background-color: #1c1c1c;
+  background-color: #4f4f4f;
   color: #dedede;
   padding: 0;
   border: 1px solid #191919;
