--- a/src/app/components/main/titlebar/titlebar.component.html
+++ b/src/app/components/main/titlebar/titlebar.component.html
@@ -1,3 +1,21 @@
-<button (click)="minimize()">Minimize</button>
-<button (click)="maximize()">Maximize</button>
-<button (click)="close()">Close</button>
+<div class="app-icon-wrapper">
+  <img class="app-icon" src="/assets/icons/favicon-light.ico" />
+</div>
+<div class="app-title-wrapper">
+  {{title}}
+</div>
+
+<div class="icon-wrapper">
+  <div class="title-icon" (click)="minimize()">
+    <fa-icon [icon]="minimizeIcon"></fa-icon>
+  </div>
+
+  <div class="title-icon" (click)="maximize()">
+    <fa-icon *ngIf="!window?.isMaximized()" [icon]="maximizeIcon"></fa-icon>
+    <fa-icon *ngIf="window?.isMaximized()" [icon]="restoreIcon"></fa-icon>
+  </div>
+
+  <div class="title-icon close" (click)="close()">
+    <fa-icon [icon]="closeIcon"></fa-icon>
+  </div>
+</div>
