--- a/src/app/components/main/topbar/path-picker/path-picker.component.html
+++ b/src/app/components/main/topbar/path-picker/path-picker.component.html
@@ -1,7 +1,7 @@
-<div class="iconWrapper clickable" (click)="showPathInfo = true" *ngIf="config.$selectedDirectory | async"
+<!-- <div class="iconWrapper clickable" (click)="showPathInfo = true" *ngIf="config.$selectedDirectory | async"
   [pTooltip]="'pathPicker.info' | translate" tooltipPosition="bottom">
   {{config.$selectedDirectory | async}}
-</div>
+</div> -->
 <div (click)="pickPath()"
   class="iconWrapper state-{{((directoryService.$status | async)?.replaysFoldersFound) ? 1 : 0}}"
   [pTooltip]="'pathPicker.pickFolder' | translate" tooltipPosition="bottom">
@@ -11,8 +11,11 @@
 <p-dialog [header]="'pathPicker.info.header'" [(visible)]="showPathInfo" [dismissableMask]="true" [modal]="true"
   appendTo="body">
   <pre *ngIf="directoryService.$status | async;let info">
+Region:               {{info.region}}
 Client version:       {{info.clientVersion}}
+<ng-container *ngIf="info.steamVersion">
 Folder version:       {{info.folderVersion}}
+</ng-container>
 Steam version:        {{info.steamVersion}}
 Replays pathbase:     {{info.replaysPathBase}}
 Preferences pathbase: {{info.preferencesPathBase}}
@@ -33,6 +36,6 @@ Replays paths:        {{info.replaysFolders | join:','}}
   preferencesPathBase?: PathBase;
   steamVersion?: boolean; -->
 
-<!-- 
+<!--
 <button (click)="do()">Pick Folder</button>
 <button (click)="refresh()">Refresh</button> -->
