--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,4 +1,9 @@
 <app-titlebar *isDesktop></app-titlebar>
 <app-topbar></app-topbar>
 <!-- <app-menu></app-menu> -->
-<router-outlet></router-outlet>
+
+<main>
+  <p-scrollPanel [style]="{width: '100%', height: '100%'}">
+    <router-outlet></router-outlet>
+  </p-scrollPanel>
+</main>
