--- a/src/app/components/main/monitor/monitor.component.html
+++ b/src/app/components/main/monitor/monitor.component.html
@@ -1,6 +1,5 @@
-<p-scrollPanel [style]="{width: '100%', height: '100%'}">
-  <div class="container" *ngIf="signalrService.$info | async;let matchInfo">
-    <!-- <p-card id="monitor-title">
+<div class="container {{$fontSizeClass | async}}" *ngIf="signalrService.$info | async;let matchInfo">
+  <!-- <p-card id="monitor-title">
       {{matchInfo.matchGroup | matchGroup | translate}}
       <ng-container *ngIf="matchInfo.matchGroup == 'CLAN'">
         (Season {{matchInfo.clanwarsSeason}})
@@ -10,22 +9,21 @@
       </ng-container>
       , {{'monitor.map' | translate}}: {{matchInfo.map.name}}
     </p-card> -->
-    <p-card id="monitor-friendly-clan" class="no-padding">
-      <app-team [clan]="matchInfo.friendlyClan" [team]="matchInfo.friendlyTeam" [cw]="matchInfo.matchGroup == 'CLAN'">
-      </app-team>
-    </p-card>
-    <p-card id="monitor-enemy-clan" class="no-padding"
-      *ngIf="matchInfo.matchGroup != 'COOPERATIVE' && matchInfo.matchGroup != 'PVE'">
-      <app-team [clan]="matchInfo.enemyClan" [team]="matchInfo.enemyTeam" [cw]="matchInfo.matchGroup == 'CLAN'">
-      </app-team>
-    </p-card>
-    <p-card id="monitor-friendly" class="no-padding">
-      <app-player [player]="player" [cw]="matchInfo.matchGroup == 'CLAN'" class="playerCard"
-        *ngFor="let player of matchInfo.friendly; let l = last; let f = first;" [last]="l" [first]="f"></app-player>
-    </p-card>
-    <p-card id="monitor-enemy" class="no-padding">
-      <app-player [player]="player" [cw]="matchInfo.matchGroup == 'CLAN'" class="playerCard"
-        *ngFor="let player of matchInfo.enemy; let l = last; let f = first;" [last]="l" [first]="f"></app-player>
-    </p-card>
-  </div>
-</p-scrollPanel>
+  <p-card id="monitor-friendly-clan" class="no-padding">
+    <app-team [clan]="matchInfo.friendlyClan" [team]="matchInfo.friendlyTeam" [cw]="matchInfo.matchGroup == 'CLAN'">
+    </app-team>
+  </p-card>
+  <p-card id="monitor-enemy-clan" class="no-padding"
+    *ngIf="matchInfo.matchGroup != 'COOPERATIVE' && matchInfo.matchGroup != 'PVE'">
+    <app-team [clan]="matchInfo.enemyClan" [team]="matchInfo.enemyTeam" [cw]="matchInfo.matchGroup == 'CLAN'">
+    </app-team>
+  </p-card>
+  <p-card id="monitor-friendly" class="no-padding">
+    <app-player [player]="player" [cw]="matchInfo.matchGroup == 'CLAN'" class="playerCard"
+      *ngFor="let player of matchInfo.friendly; let l = last; let f = first;" [last]="l" [first]="f"></app-player>
+  </p-card>
+  <p-card id="monitor-enemy" class="no-padding">
+    <app-player [player]="player" [cw]="matchInfo.matchGroup == 'CLAN'" class="playerCard"
+      *ngFor="let player of matchInfo.enemy; let l = last; let f = first;" [last]="l" [first]="f"></app-player>
+  </p-card>
+</div>
