--- a/src/app/components/main/topbar/connection/qr/qr.component.html
+++ b/src/app/components/main/topbar/connection/qr/qr.component.html
@@ -2,9 +2,9 @@
 <h2>{{ 'webConnect.desktop.title' | translate }}</h2>
 <img [src]="tokenPath" />
 <p>
-  {{ 'webConntect.desktop.description' }}
+  {{ 'webConnect.desktop.description' | translate }}
 </p>
 <ol>
-  <li>{{ 'webConntect.desktop.step1' }}</li>
-  <li>{{ 'webConntect.desktop.step2' }}</li>
+  <li>{{ 'webConnect.desktop.step1' | translate }}</li>
+  <li>{{ 'webConnect.desktop.step2' | translate }}</li>
 </ol>
