--- a/src/app/components/main/monitor/team/team.component.html
+++ b/src/app/components/main/monitor/team/team.component.html
@@ -6,42 +6,50 @@
   [translateParams]="{ rank: clan.rank, league: 'monitor.cw.leagues.' + clan.mainRating.league | translate, division: clan.mainRating.division | roman, winrate: (clan.mainRating.wins/clan.mainRating.battles * 100) | number:'0.0-2' }">
 </span>
 <span *ngIf="!cw">
-  Avg Xp: {{team.xp | number:'0.0-0'}} Avg Winrate: {{team.winrate | number:'0.0-2'}}% Avg Battles: {{team.battles | number:'0.0-0'}}
+  Avg Xp: {{team.xp | number:'0.0-0'}} Avg Winrate: {{team.winrate | number:'0.0-2'}}% Avg Battles:
+  {{team.battles | number:'0.0-0'}}
 </span>
 
 <a *ngIf="cw" #weblink target="_blank" hidden="hidden" href="{{ clan.region | wowsNumbers }}clan/{{clan.id}},/">Link</a>
 
-<p-contextMenu *ngIf="cw" [target]="el.nativeElement" appendTo="body" [model]="items" triggerEvent="click"></p-contextMenu>
+<p-contextMenu *ngIf="cw" [target]="el.nativeElement" appendTo="body" [model]="items" triggerEvent="click">
+</p-contextMenu>
 
 <p-dialog *ngIf="cw" [(visible)]="showDialog" [dismissableMask]="true" [modal]="true" appendTo="body" [closable]="true">
   <p-header>
     <span [style.color]="clan.color | sanitizeCss">[{{clan.tag}}]</span>&nbsp;
     <span>{{clan.name}} ({{clan.region | region}})</span>
   </p-header>
-  <h3>
-    Main Rating
-  </h3>
-  <pre>
-League:         {{ 'monitor.cw.leagues.' +clan.mainRating.league | translate }}
-Division:       {{ clan.mainRating.division | roman }}
-Points:         {{ clan.mainRating.rating }}
-Battles:        {{ clan.mainRating.battles }}
-Wins:           {{ clan.mainRating.wins }}
-Longest Streak: {{ clan.mainRating.longestWinningStreak }}
-Current Streak: {{ clan.mainRating.currentWinningStreak }}
-  </pre>
-  <h3>
-    Secondary Rating
-  </h3>
-  <pre>
-League:         {{ 'monitor.cw.leagues.' +clan.secondaryRating.league | translate }}
-Division:       {{ clan.secondaryRating.division | roman }}
-Points:         {{ clan.secondaryRating.rating }}
-Battles:        {{ clan.secondaryRating.battles }}
-Wins:           {{ clan.secondaryRating.wins }}
-Longest Streak: {{ clan.secondaryRating.longestWinningStreak }}
-Current Streak: {{ clan.secondaryRating.currentWinningStreak }}
+  <ng-container *ngIf="clan.mainRating">
+    <h3>
+      Main Rating
+    </h3>
+    <pre>
+  League:         {{ 'monitor.cw.leagues.' +clan.mainRating.league | translate }}
+  Division:       {{ clan.mainRating.division | roman }}
+  Points:         {{ clan.mainRating.rating }}
+  Battles:        {{ clan.mainRating.battles }}
+  Wins:           {{ clan.mainRating.wins }}
+  Longest Streak: {{ clan.mainRating.longestWinningStreak }}
+  Current Streak: {{ clan.mainRating.currentWinningStreak }}
     </pre>
+  </ng-container>
+
+  <ng-container *ngIf="clan.secondaryRating">
+    <h3>
+      Secondary Rating
+    </h3>
+    <pre>
+  League:         {{ 'monitor.cw.leagues.' +clan.secondaryRating.league | translate }}
+  Division:       {{ clan.secondaryRating.division | roman }}
+  Points:         {{ clan.secondaryRating.rating }}
+  Battles:        {{ clan.secondaryRating.battles }}
+  Wins:           {{ clan.secondaryRating.wins }}
+  Longest Streak: {{ clan.secondaryRating.longestWinningStreak }}
+  Current Streak: {{ clan.secondaryRating.currentWinningStreak }}
+      </pre>
+  </ng-container>
+
   <!-- <a routerLink="/wcw/{{clan.id}}">Learn more</a> -->
 </p-dialog>
 
